--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      property="og:description"
+      content="Slack like chat app built using React.js, Material-UI and Firebase"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/sample.png" />
+    <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Slack like chat app built using React.js, Material-UI and Firebase"
     />
     <link
       rel="apple-touch-icon"
@@ -30,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Chat App</title>
+    <title>Slack</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
